force-app/main/default/objects/Clearance__c/Clearance__c.object-meta.xml
<CustomObject>
    <label>Clearance</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Clearance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clearances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>