force-app/main/default/objects/Clearance__c/fields/Child_By_Birth_Kinship_Adoption_and_Date__c.field-meta.xml
<CustomField>
    <fullName>Child_By_Birth_Kinship_Adoption_and_Date__c</fullName>
    <label>Child By Birth/Kinship/Adoption and Date</label>
    <type>TextArea</type>
</CustomField>