force-app/main/default/objects/Clearance__c/fields/CPS_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>CPS_Completion_Date__c</fullName>
    <label>CPS Completion Date</label>
    <type>Date</type>
</CustomField>