force-app/main/default/objects/Clearance__c/fields/CPS_Result__c.field-meta.xml
<CustomField>
    <fullName>CPS_Result__c</fullName>
    <label>CPS Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
            <value>
                <fullName>Pass with Director&apos;s written approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>