force-app/main/default/objects/Clearance__c/fields/Date_of_Physical__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Physical__c</fullName>
    <label>Date of Physical</label>
    <type>Date</type>
</CustomField>