force-app/main/default/objects/Clearance__c/fields/Date_Of_Physical_Verified__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Physical_Verified__c</fullName>
    <formula>NOT(ISBLANK(Date_of_Physical__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Verified, If filled the date of physical.</inlineHelpText>
    <label>Verified(Filled date of physical)</label>
    <type>Checkbox</type>
</CustomField>