force-app/main/default/objects/Clearance__c/fields/Federal_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Federal_Completion_Date__c</fullName>
    <label>Federal Completion Date</label>
    <type>Date</type>
</CustomField>