force-app/main/default/objects/Clearance__c/fields/Federal_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Federal_Request_Date__c</fullName>
    <label>Federal Request Date</label>
    <type>Date</type>
</CustomField>