force-app/main/default/objects/Clearance__c/fields/Federal_Verified__c.field-meta.xml
<CustomField>
    <fullName>Federal_Verified__c</fullName>
    <formula>NOT(ISBLANK(Federal_Completion_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Verified, If filled the federal completion date.</inlineHelpText>
    <label>Verified(Filled federal completion date)</label>
    <type>Checkbox</type>
</CustomField>