force-app/main/default/objects/Clearance__c/fields/Home_Approval__c.field-meta.xml
<CustomField>
    <fullName>Home_Approval__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Home Approval</label>
    <referenceTo>Home_Approval__c</referenceTo>
    <relationshipLabel>Clearances</relationshipLabel>
    <relationshipName>Clearances</relationshipName>
    <type>Lookup</type>
</CustomField>