force-app/main/default/objects/Clearance__c/fields/Override_Date__c.field-meta.xml
<CustomField>
    <fullName>Override_Date__c</fullName>
    <label>Override Date</label>
    <type>Date</type>
</CustomField>