force-app/main/default/objects/Clearance__c/fields/State_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>State_Completion_Date__c</fullName>
    <label>State Completion Date</label>
    <type>Date</type>
</CustomField>