force-app/main/default/objects/Clearance__c/fields/State_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>State_Request_Date__c</fullName>
    <label>State Request Date</label>
    <type>Date</type>
</CustomField>