force-app/main/default/objects/Clearance__c/fields/State_Verified__c.field-meta.xml
<CustomField>
    <fullName>State_Verified__c</fullName>
    <formula>NOT(ISBLANK(State_Request_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Verified, If filled the state request date.</inlineHelpText>
    <label>Verified (Filled state request date)</label>
    <type>Checkbox</type>
</CustomField>