force-app/main/default/objects/Clearance__c/fields/Verified__c.field-meta.xml
<CustomField>
    <fullName>Verified__c</fullName>
    <formula>NOT(ISBLANK(CPS_Completion_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Verified, If filled the CPS Completion date.</inlineHelpText>
    <label>Verified (Filled CPS Completion date)</label>
    <type>Checkbox</type>
</CustomField>